<resources>
    <string name="app_name">RCON for ARK</string>
    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Main Activity -->

    <string name="no_server">No server.\n Press the + button to add one.</string>
    <string name="connecting">Connecting to the server …</string>

    <!--  New / Edit Server Activity-->

    <string name="title_activity_server_connection">Server</string>
    <string name="new_server">New server</string>
    <string name="edit_server">Edit server</string>

    <string name="server_name">Server name</string>
    <string name="server_name_hint"> </string>

    <string name="hostname">IP Address / Hostname</string>
    <string name="hostname_hint"> </string>

    <string name="rcon_port">Rcon Port</string>
    <string name="rcon_port_hint">32330</string>

    <string name="query_port">Query Port (optional)</string>
    <string name="query_port_hint">27017</string>

    <string name="password">Password</string>

    <string name="admin_name">Admin name (optional)</string>
    <string name="admin_name_hint"> </string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_rcon">ARK RCON</string>

    <string name="invalid_query_port">The query port is invalid</string>
    <string name="invalid_rcon_port">The RCON port is invalid</string>

    <string name="test_connection">Test connection</string>
    <string name="test_connection_success">Connections successful.</string>
    <string name="test_authentication_fail">Authentication failed, make sure your password is correct.</string>
    <string name="test_connection_fail">Connection failed, make sure RCON is enabled on your server and IP / Port are correct.</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="step1_help"> </string>
    <string name="step2_help">The query port is only used to display the player counts on the server list and the playing times of players connected to a server.</string>
    <string name="step3_1_help">Name for your server. Click the "Refresh" button to automatically fetch it from your server (This require Query port to be set).</string>
    <string name="step3_2_help">This name will prefix all chat message send from the app.</string>


    <!--  Players fragment-->

    <string name="fragment_players">Players</string>
    <string name="no_players">No players connected.</string>

    <string name="kill">Kill</string>
    <string name="kick">Kick</string>
    <string name="ban">Ban</string>
    <string name="whitelist">Add to white list</string>
    <string name="send_message">Send message</string>
    <string name="copy_name">Copy name</string>
    <string name="copy_steamid">Copy Steam ID</string>

    <!--  basic Commands fragment-->

    <string name="quick_commands">Quick commands</string>
    <string name="custom_commands">Custom commands</string>
    <string name="changeTime">Set time of day</string>
    <string name="saveworld">Save world</string>
    <string name="whitelist_remove">Remove player from whitelist</string>
    <string name="unban">Unban player</string>
    <string name="killdinos">Kill all wild dinos</string>
    <string name="killdinos_confirm">Do you really want to kill all wild dinos ?</string>
    <string name="player_name">Player name :</string>
    <string name="player_steamid">Steam Id :</string>

    <!--  chat fragment-->

    <string name="fragment_chat">Chat</string>
    <string name="send">Send to All</string>
    <string name="broadcast">Broadcast</string>

    <!--  gamelog fragment-->

    <string name="fragment_log">Game Log</string>

    <!--  custom commands fragment-->

    <string name="fragment_custom_commands">CUSTOM COMMANDS</string>
    <string name="exec">Exec</string>
    <string name="output">Output</string>
    <string name="command">Command</string>
    <string name="params">Parameters</string>

    <!-- Errors -->

    <string name="connection_fail">The server is unreachable, make sure your IP / Port is correct.</string>
    <string name="authentication_fail">Authentication failed, make sure your password is correct.</string>
    <string name="conneciton_lost">Connection lost</string>
    <string name="port_not_valid">Port is not correct</string>
    <string name="hostname_not_valid">Hostname is not correct</string>

    <string name="error_log_write">Unable to write the log file</string>
    <string name="fragment_chat_log"><![CDATA[Chat & Log]]></string>
    <string name="fragment_commands">Commands</string>
    <string name="action_refresh">Refresh</string>
    <string name="migrate_log">Updating log files …</string>
    <string name="action_change_file">Change file</string>
    <string name="select_file">Select file</string>
    <string name="chat_instead_of_log">Use the \'getchat\' command.</string>
    <string name="chat_instead_of_log_summary">The \'getchat\' command will be used to get the chat instead of the \'getgamelog\' command.</string>
    <string name="vibrate">Vibrate</string>
    <string name="general">General</string>
    <string name="chat_log"><![CDATA[Chat & Log]]></string>
    <string name="notification_title">Chat alert</string>
    <string name="update_available">A new version of the application is available.</string>
    <string name="update_now">Update</string>
    <string name="update_later">Later</string>



    <!-- Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="chat_refresh_rate_summary">Every %s</string>
    <string name="chat_refresh_rate">Chat refresh delay</string>
    <string name="log_refresh_rate_summary">Every %s</string>
    <string name="log_refresh_rate">Game log refresh delay</string>

    <string name="theme">Theme</string>
    <string name="theme_summary">%s</string>
    <string name="theme_default">light</string>

    <string name="save_log">Save game log</string>
    <string name="save_log_summary">The log will be kept between each connection</string>
    <string name="keep_screen_on">Keep screen ON</string>
    <string name="keep_screen_on_summary">The screen will not turn off while the app is running</string>

    <string name="chat_auto_scroll_summary">Automatically scrolls down when a message is received</string>
    <string name="chat_auto_scroll">Auto scroll</string>

    <string name="enable_notifications">Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="chat_notification_keyword">Keywords (Separated by coma)</string>
    <string name="chat_notification_keyword_summary">Display a notification when one of these keywords appear in the chat.</string>



</resources>
