<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anthonydenaud.arkrcon.view.ServerConnectionActivity"
    tools:showIn="@layout/activity_server_connection">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/server_name"
            android:inputType="text"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/fetch_name_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_cached" />

    </LinearLayout>

    <TextView
        android:id="@+id/hostname_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hostname" />


    <EditText
        android:id="@+id/hostname_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hostname_hint"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/rcon_port_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rcon_port" />

    <EditText
        android:id="@+id/rcon_port_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/rcon_port_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/query_port_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_port" />

    <EditText
        android:id="@+id/query_port_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/query_port_hint"
        android:inputType="number" />

    <!--<EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword" />-->


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleContentDescription="Show password"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/admin_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/admin_name" />

</LinearLayout>
